fixed nav on mobile devices

--- a/members/static/members/about.css
+++ b/members/static/members/about.css
@@ -170,7 +170,7 @@ a:active {
   width: 100%;
   flex-direction: column;
   right: 0px;
-   top: 4rem;
+  top: 3.1rem;
   background-color: #020202;
   box-sizing: border-box;
 }
